--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href="https://cvws.icloud-content.com/B/ATiAddyGavHh6YjMC37lvJWvVyVgARNjdG7JMaPgQeHud6amLxIYK6Kk/CV+Alex.pdf?o=AuIYTprz4-efWsTHfvA4L9c16R4k6LCV0cYltlTMrZ-5&v=1&x=3&a=CAogWkvYnwCpB1X7N9dYT5A7al2Jddvv_J-TMt9xoRJ4q2YSbxC929WL6y8Y3dKMjOsvIgEAUgSvVyVgWgQYK6Kkaici0phBlG3bHoQrm9HsNgL_O4ggG8_m6ytnBGnOBDSTXNSeUJtmy_ByJ-eMa3k-yUFfEU4DdPehFY2LDXo20bzPvmkuFyJcGJh_UfQkHlVHOQ&e=1643655670&fl=&r=59bee1e8-5e45-4998-9fa1-2f4eb1ca2031-1&k=szEPsTcK5GZYDMBDtlXDIA&ckc=com.apple.clouddocs&ckz=com.apple.CloudDocs&p=55&s=MjQRJLx_U3QfSVlyp5eMUoi-vb4&cd=i" class="btn btn--stroke btn--small">Download CV</a>
+            <a href="https://cvws.icloud-content.com/B/ATiAddyGavHh6YjMC37lvJWvVyVgARNjdG7JMaPgQeHud6amLxIYK6Kk/CV+Alex.pdf?o=AuIYTprz4-efWsTHfvA4L9c16R4k6LCV0cYltlTMrZ-5&v=1&x=3&a=CAogWkvYnwCpB1X7N9dYT5A7al2Jddvv_J-TMt9xoRJ4q2YSbxC929WL6y8Y3dKMjOsvIgEAUgSvVyVgWgQYK6Kkaici0phBlG3bHoQrm9HsNgL_O4ggG8_m6ytnBGnOBDSTXNSeUJtmy_ByJ-eMa3k-yUFfEU4DdPehFY2LDXo20bzPvmkuFyJcGJh_UfQkHlVHOQ&e=1643655670&fl=&r=59bee1e8-5e45-4998-9fa1-2f4eb1ca2031-1&k=szEPsTcK5GZYDMBDtlXDIA&ckc=com.apple.clouddocs&ckz=com.apple.CloudDocs&p=55&s=MjQRJLx_U3QfSVlyp5eMUoi-vb4&cd=i" class="btn btn--stroke btn--small" download>Download CV</a>
 
         </div> <!-- end header-content -->
 
