--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href="CV Alex.pdf" download>Download CV</a>
+            <a href="CV Alex.pdf" download class="btn btn--stroke btn--small">Download CV</a>
 
         </div> <!-- end header-content -->
 
